全ての画面で使うcssリンクをmain.cssにまとめました

--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -1,1 +1,8 @@
 @charset "UTF-8";
+/*全ての画面で使うCSSのリンク*/
+@import url('besign-base.css');
+@import url('button.css');
+@import url('footer-base.css');
+@import url('header-base.css');
+@import url('popup.css');
+@import url('text-style.css');
