--- a/WebContent/css/Home/Home.css
+++ b/WebContent/css/Home/Home.css
@@ -28,7 +28,7 @@ body{
 button {
  width: 100px;
  height:35px;
- border-radius: 2vh;
+ border-radius: 10px;
  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
