--- a/WebContent/css/text-style.css
+++ b/WebContent/css/text-style.css
@@ -1,1 +1,32 @@
 @charset "UTF-8";
+/*全体の画面で使うデフォルトのテキスト設定*/
+html,body{
+	font-family: Arial, Helvetica, sans-serif;
+	color:black;
+	font-size: 16px;
+}
+
+/*テキスト左寄せ(デフォルト)*/
+.text-left{
+	text-align: left;
+}
+
+/*中央寄せ*/
+.text-center{
+	text-align: center;
+}
+
+/*右寄せ*/
+.text-right{
+	text-align: right;
+}
+
+/*太字*/
+.text-bold{
+	font-weight: bold;
+}
+
+/*下線*/
+.text-underline{
+	text-decoration: underline;
+}
