--- a/WebContent/css/Product/productlist.css
+++ b/WebContent/css/Product/productlist.css
@@ -62,12 +62,37 @@
 	margin-left:10px;
 }
 
+/*表示するボタン*/
 .btn-display{
 	background-color:cornflowerblue;
 }
 
+/*非表示にするボタン*/
 .btn-hide{
 	background-color:hotpink;
+}
+
+/*ホームボタン・新規作成ボタン用*/
+.btn-row {
+  margin-top: 8px;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+/*新規作成ボタン*/
+.btn-create{
+	width:110px;
+	padding:10px;
+	border-radius:10px;
+	border:1px solid black;
+	background-color: orange;
+	color:black;
+	cursor:pointer;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+	transition: background-color 0.3s ease;
+	text-align: center;
+	margin-left:10px;
 }
 
 /*ボタンにカーソルがのっている場合の設定*/
