--- a/WebContent/css/Product/productlist.css
+++ b/WebContent/css/Product/productlist.css
@@ -2,13 +2,15 @@
 
 /*商品ボックス*/
 .product-box{
-	width: 800px;
+	width:100%;
+	max-width: 800px;
 	height: 620px;
 	margin: 20px auto;
 	padding: 20px;
 	border: 2px solid black;
 	background-color:rgb(251, 255, 251);
 	overflow-y: auto;
+	box-sizing: border-box;
 }
 
 /*商品1行分*/
@@ -93,6 +95,7 @@
 	transition: background-color 0.3s ease;
 	text-align: center;
 	margin-left:10px;
+	
 }
 
 /*ボタンにカーソルがのっている場合の設定*/
