--- a/WebContent/css/Order/OrderList.css
+++ b/WebContent/css/Order/OrderList.css
@@ -71,7 +71,7 @@ button:active {
 	align-items: center;
 	background-color: rgb(251, 255, 251);
 	z-index: 1000;
-	padding: 10px;
+	padding: 8px;
 }
 
 /*ホームボタン*/
@@ -87,7 +87,8 @@ button:active {
 	display: flex;
 	flex-direction: column;
 	width: 100%;
-	margin-top: 30px;
+	padding-top: 30px;
+	overflow: hidden;
 }
 
 /* 横スクロールバー非表示 */
@@ -122,8 +123,10 @@ button:active {
 .tab-contents {
 	width: 90vw;
 	height: 70vh;
+	overflow-y:auto;
 	padding: 20px 10px 50px 10px;
 	margin: 0 auto;
+	margin-top: 15px;
 	color: #555;
 }
 
@@ -198,4 +201,8 @@ ul {
 	left: -10px;
 	bottom: -5px;
 	color: rgb(255, 255, 255);
+}
+
+.no-orders{
+	text-align: center;
 }
