--- a/WebContent/css/Category/categorylist.css
+++ b/WebContent/css/Category/categorylist.css
@@ -1,58 +1,59 @@
 @charset "UTF-8";
 
 main {
-  width: 100%; 
-  height: 100vh;       
-  padding: 0;
+	width: 100%;
+	height: 100vh;
+	padding: 0;
 }
 
 /*カテゴリーボックス*/
-.category-box{
-	width:800px;
-	margin:20px auto;
+.category-box {
+	width: 800px;
+	margin: 20px auto;
 	max-width: 100%;
 	height: 620px;
 	margin: 20px auto;
 	padding: 20px;
 	border: 2px solid black;
-	background-color:rgb(251, 255, 251);
+	background-color: rgb(251, 255, 251);
 	overflow-y: auto;
 	box-sizing: border-box;
 	justify-content: center;
 }
 
 /*商品1行分*/
-.category-row{
-	display:flex;
+.category-row {
+	display: flex;
 	align-items: center;
 	border-bottom: 1px solid black;
 	padding: 10px 0;
 }
 
 /*最後の行はボーダーあり*/
-.category-row:last-child{
+.category-row:last-child {
 	border-bottom: 1px solid black;
 }
 
 /*各要素の幅調整*/
-.category-name{
-	flex:3;/*幅の比率*/
+.category-name {
+	flex: 3;
+	/*幅の比率*/
 }
 
 /*ホームボタン・新規作成ボタン用*/
 .btn-row {
-  margin-top: 8px;
-  display: flex;
-  gap: 10px;
-  justify-content: flex-start;
-  align-items: center;
-  margin-left: 10px;
+	margin-top: 8px;
+	display: flex;
+	gap: 10px;
+	justify-content: flex-start;
+	align-items: center;
+	margin-left: 10px;
 }
 
 /*ホームボタン*/
 .homebutton {
- width: 30px;
- height: auto;
- border-right: 1px solid rgb(192, 192, 192);
- padding-right: 10px;
+	width: 30px;
+	height: auto;
+	border-right: 1px solid rgb(192, 192, 192);
+	padding-right: 10px;
 }
