--- a/WebContent/css/Product/productlist.css
+++ b/WebContent/css/Product/productlist.css
@@ -1,109 +1,109 @@
 @charset "UTF-8";
 
 /*商品ボックス*/
-.product-box{
-	width:100%;
+.product-box {
+	width: 100%;
 	max-width: 800px;
 	height: 620px;
 	margin: 20px auto;
 	padding: 20px;
 	border: 2px solid black;
-	background-color:rgb(251, 255, 251);
+	background-color: rgb(251, 255, 251);
 	overflow-y: auto;
 	box-sizing: border-box;
 }
 
 /*商品1行分*/
-.product-row{
-	display:flex;
+.product-row {
+	display: flex;
 	align-items: center;
 	border-bottom: 1px solid black;
 	padding: 10px 0;
 }
 
 /*一時的に非表示にするクラス*/
-.hidden-row{
+.hidden-row {
 	display: none;
 }
 
 /*最後の行はボーダーあり*/
-.product-row:last-child{
+.product-row:last-child {
 	border-bottom: 1px solid black;
 }
 
 /*各要素の幅調整*/
-.product-name{
-	flex:3;/*幅の比率*/
+.product-name {
+	flex: 3;
+	/*幅の比率*/
 }
 
-.product-price{
-	flex:1;
+.product-price {
+	flex: 1;
 }
 
 /*編集ボタンの設定と幅調整*/
-.btn-edit{
-	width:110px;
-	padding:10px;
-	border-radius:10px;
-	border:1px solid black;
+.btn-edit {
+	width: 110px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 1px solid black;
 	background-color: rgb(0, 128, 0);
-	color:white;
-	cursor:pointer;
-	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+	color: white;
+	cursor: pointer;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	transition: background-color 0.3s ease;
 	text-align: center;
-	margin-left:10px;
+	margin-left: 10px;
 }
 
 /*表示・非表示ボタンの設定と幅調整*/
-.btn-toggle{
-	width:110px;
-	padding:10px;
-	border-radius:10px;
-	border:1px solid black;
-	color:white;
-	cursor:pointer;
-	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+.btn-toggle {
+	width: 110px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 1px solid black;
+	color: white;
+	cursor: pointer;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	transition: background-color 0.3s ease;
 	text-align: center;
-	margin-left:10px;
+	margin-left: 10px;
 }
 
 /*表示するボタン*/
-.btn-display{
-	background-color:cornflowerblue;
+.btn-display {
+	background-color: cornflowerblue;
 }
 
 /*非表示にするボタン*/
-.btn-hide{
-	background-color:hotpink;
+.btn-hide {
+	background-color: hotpink;
 }
 
 /*ホームボタン・新規作成ボタン用*/
 .btn-row {
-  margin-top: 8px;
-  display: flex;
-  gap: 10px;
-  align-items: center;
+	margin-top: 8px;
+	display: flex;
+	gap: 10px;
+	align-items: center;
 }
 
 /*新規作成ボタン*/
-.btn-create{
-	width:110px;
-	padding:10px;
-	border-radius:10px;
-	border:1px solid black;
+.btn-create {
+	width: 110px;
+	padding: 10px;
+	border-radius: 10px;
+	border: 1px solid black;
 	background-color: orange;
-	color:black;
-	cursor:pointer;
-	box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+	color: black;
+	cursor: pointer;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 	transition: background-color 0.3s ease;
 	text-align: center;
-	margin-left:10px;
-	
+	margin-left: 10px;
+
 }
 
 /*ボタンにカーソルがのっている場合の設定*/
-.btn-edit:hover,.btn-display:hover{
-	
-}
+.btn-edit:hover,
+.btn-display:hover {}
