--- a/WebContent/css/popup.css
+++ b/WebContent/css/popup.css
@@ -1,66 +1,68 @@
 @charset "UTF-8";
+
 /*ポップアップの背景*/
-.popup-overlay{
-	display:none;
-	position:fixed;
-	top:0;
-	left:0;
-	width:100%;
-	height:100%;
-	background:rgba(0,0,0,0.5);
-	z-index:1000;
+.popup-overlay {
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 1000;
 }
 
 /*ポップアップの内容*/
-.popup-content{
+.popup-content {
 	display: none;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    padding: 50px;
-    border-radius: 2px;
-    z-index: 1001;
-    width:400px;
-    height:auto;
-    max-height: 80%;
-    overflow-y: auto;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background: white;
+	padding: 50px;
+	border-radius: 2px;
+	z-index: 1001;
+	width: 400px;
+	height: auto;
+	max-height: 80%;
+	overflow-y: auto;
 }
 
 /* ポップアップ内のボタンを横並びにする */
 .popup-content form,
 .popup-content .popup-close {
-  display: inline-block;
-  vertical-align: middle;
-  margin-right: 10px; /* ボタン間の隙間 */
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 10px;
+	/* ボタン間の隙間 */
 }
 
 /*ポップアップを表示する*/
 .popup-overlay.show,
 .popup-content.show {
-    display: block;
+	display: block;
 }
 
 /*閉じるボタンのスタイル*/
-.popup-close{
-	background-color:white;
-	color:black;
-	border:2px solid black;
-	border-radius:5px;
-	padding:10px;
-	cursor:pointer;
+.popup-close {
+	background-color: white;
+	color: black;
+	border: 2px solid black;
+	border-radius: 5px;
+	padding: 10px;
+	cursor: pointer;
 }
 
 /*進むボタンのスタイル*/
-.popup-proceed{
-	background-color:red;
-	color:white;
-	border:2px solid black;
-	border-radius:5px;
-	padding:10px;
-	cursor:pointer;
+.popup-proceed {
+	background-color: red;
+	color: white;
+	border: 2px solid black;
+	border-radius: 5px;
+	padding: 10px;
+	cursor: pointer;
 }
