--- a/WebContent/css/Category/categorylist.css
+++ b/WebContent/css/Category/categorylist.css
@@ -2,16 +2,15 @@
 
 main {
 	width: 100%;
-	height: 100vh;
 	padding: 0;
 }
 
 /*カテゴリーボックス*/
 .category-box {
-	width: 800px;
+	width: 80vw;
 	margin: 20px auto;
 	max-width: 100%;
-	height: 620px;
+	height: 85vh;
 	margin: 20px auto;
 	padding: 20px;
 	border: 2px solid black;
