--- a/WebContent/css/Product/productlist.css
+++ b/WebContent/css/Product/productlist.css
@@ -2,9 +2,9 @@
 
 /*商品ボックス*/
 .product-box {
-	width: 100%;
-	max-width: 800px;
-	height: 620px;
+	width: 80vw;
+	max-width: 100%;
+	height: 85vh;
 	margin: 20px auto;
 	padding: 20px;
 	border: 2px solid black;
