--- a/WebContent/css/Product/productform.css
+++ b/WebContent/css/Product/productform.css
@@ -22,10 +22,10 @@ main {
 
 /*フォームボックス*/
 .form-box {
-	width: 800px;
+	width: 85vw;
 	margin: 20px auto;
 	max-width: 100%;
-	height: 700px;
+	height: 100%;
 	margin: 20px auto;
 	padding: 20px;
 	border: 2px solid black;
