--- a/WebContent/css/Order/OrderList.css
+++ b/WebContent/css/Order/OrderList.css
@@ -1,11 +1,5 @@
 @charset "UTF-8";
 
-main {
-	width: 100%;
-	margin: 0 auto;
-	padding: 0;
-}
-
 /*注文番号ボタン*/
 .order_num {
 	width: 35px;
@@ -33,7 +27,7 @@ main {
 	border: 1px solid #333
 }
 
-/*履歴/注文ボタン*/
+/*履歴/注文フッター*/
 .order_history-form {
 	display: flex;
 	justify-content: space-between;
@@ -42,6 +36,7 @@ main {
 	padding: 0px 40px;
 }
 
+/*履歴/注文ボタン*/
 .order_history {
 	width: 45px;
 	height: 25px;
@@ -56,77 +51,9 @@ button {
 	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
 }
 
+/*ボタン押したときに沈むアニメーション*/
 button:active {
 	transform: translateY(1px);
-}
-
-/* タブラッパーを上部に固定 */
-.tab-wrapper {
-	position: fixed;
-	top: 0;
-	left: 15px;
-	width: calc(100% - 30px);
-	display: flex;
-	align-items: center;
-	background-color: rgb(251, 255, 251);
-	z-index: 1000;
-	padding: 10px;
-}
-
-/*ホームボタン*/
-.homebutton {
-	width: 30px;
-	height: auto;
-	border-right: 1px solid rgb(192, 192, 192);
-	padding-right: 10px;
-}
-
-/*タブ全体*/
-.tab {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
-	padding-top: 30px;
-	overflow: hidden;
-}
-
-/* 横スクロールバー非表示 */
-.tab-labels::-webkit-scrollbar {
-	display: none;
-}
-
-/* ラベルを包むラッパーに横スクロールを指定 */
-.tab-labels {
-	display: flex;
-	overflow-x: auto;
-	margin: 0 auto;
-	scroll-behavior: smooth;
-}
-
-/*ラジオボタンを非表示にする*/
-.tab-item {
-	display: none;
-}
-
-/*ラベルの設定*/
-.tab-labels label {
-	flex: 0 0 auto;
-	padding: 8px 12px;
-	color: #999;
-	white-space: nowrap;
-	cursor: pointer;
-	text-align: center;
-}
-
-/* コンテンツ切り替え */
-.tab-contents {
-	width: 90vw;
-	height: 75vh;
-	overflow-y: auto;
-	padding: 20px 10px 50px 10px;
-	margin: 0 auto;
-	margin-top: 15px;
-	color: #555;
 }
 
 /*テーブルデザイン*/
@@ -138,11 +65,13 @@ table {
 	text-align: center;
 }
 
+/*テーブルヘッダー*/
 th {
 	border: 1px solid #333;
 	padding: 8px;
 }
 
+/*テーブルセル*/
 td {
 	border-bottom: 1px solid #333;
 	padding: 8px;
@@ -154,6 +83,7 @@ ul {
 	padding-left: 10px;
 }
 
+/*リスト*/
 .list {
 	display: grid;
 	width: fit-content;
@@ -161,12 +91,14 @@ ul {
 	grid-template-columns: repeat(2, auto);
 }
 
+/*幅に合わせてリストの列数を変える*/
 @media(min-width:1000px) {
 	.list {
 		grid-template-columns: repeat(3, auto);
 	}
 }
 
+/*トッピングデザイン*/
 .topping {
 	text-align: left;
 	text-decoration: underline;
@@ -185,23 +117,7 @@ ul {
 	z-index: 1000;
 }
 
-/*件数の表示*/
-.count {
-	flex-shrink: 0;
-	display: inline-block;
-	font-size: 12px;
-	width: 15px;
-	height: 15px;
-	border-radius: 50%;
-	background: rgb(255, 128, 128);
-	text-align: center;
-	line-height: 16px;
-	position: relative;
-	left: -10px;
-	bottom: -5px;
-	color: rgb(255, 255, 255);
-}
-
+/*注文がない時のメッセージ*/
 .no-orders {
 	text-align: center;
 }
