--- a/WebContent/css/Order/OrderList.css
+++ b/WebContent/css/Order/OrderList.css
@@ -58,6 +58,7 @@ button:active {
 
 /*テーブルデザイン*/
 table {
+	overflow: visible;
 	box-sizing: border-box;
 	width: 100%;
 	border-collapse: collapse;
@@ -68,7 +69,21 @@ table {
 /*テーブルヘッダー*/
 th {
 	border: 1px solid #333;
+	top: 0px;
 	padding: 8px;
+	position: sticky;
+	background: rgb(251, 255, 251);
+	border: 1px solid black;
+}
+/*テーブルの線固定*/
+th::before{
+	content: "";
+	top: -1px;
+	left: -1px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	border: 1px solid black;
 }
 
 /*テーブルセル*/
@@ -104,6 +119,10 @@ ul {
 	text-decoration: underline;
 	text-decoration-color: rgb(192, 192, 192);
 	text-underline-offset: 4px;
+}
+
+.toppingname{
+	width: 10em;
 }
 
 .fixed-row {
