--- a/WebContent/css/Order/ProvidedHistory.css
+++ b/WebContent/css/Order/ProvidedHistory.css
@@ -9,24 +9,8 @@
 	border: 1px solid rgb(0, 128, 0)
 }
 
-/*卓番/提供ボタン*/
-.provide-btn.green {
-	width: 50px;
-	height: 50px;
-	color: rgb(255, 255, 255);
-	background-color: rgb(0, 128, 0);
-	border: 1px solid #333
-}
-
-.provide-btn.orange {
-	width: 50px;
-	height: 50px;
-	color: rgb(255, 255, 255);
-	background-color: rgb(255, 128, 0);
-	border: 1px solid rgb(50 50 50)
-}
-
-.provide-btn.red {
+/*戻すボタン*/
+.order_return {
 	width: 50px;
 	height: 50px;
 	color: rgb(255, 255, 255);
@@ -34,18 +18,17 @@
 	border: 1px solid rgb(50 50 50)
 }
 
-/*履歴フッター*/
+/*注文フッター*/
 .order_history-form {
 	display: flex;
-	justify-content: space-between;
-	/* 左右に分ける */
 	align-items: center;
 	height: 35px;
 	padding: 0px 10px;
 }
 
-/*履歴ボタン*/
+/*注文ボタン*/
 .order_history {
+	margin: 0 0 0 auto;
 	width: 45px;
 	height: 25px;
 	color: rgb(0, 0, 0);
@@ -75,13 +58,12 @@ table {
 }
 
 /*テーブルヘッダー*/
-th {
+th{
 	border: 1px solid rgb(50 50 50);
 	top: 0px;
 	padding: 8px;
 	position: sticky;
-	background: rgb(190 235 170);
-	color: rgb(30 80 30);
+	background: rgb(228 228 228);
 	border: 1px solid black;
 }
 
@@ -122,19 +104,4 @@ td {
 /*注文がない時のメッセージ*/
 .no-orders {
 	text-align: center;
-}
-
-.m-green{
-	font-size: 30px;
-	color: rgb(0, 128, 0);
-}
-
-.m-orange{
-	font-size: 30px;
-	color: rgb(255, 128, 0);
-}
-
-.m-red{
-	font-size: 30px;
-	color: rgb(255 60 60);
 }
