--- a/WebContent/css/Category/categorylist.css
+++ b/WebContent/css/Category/categorylist.css
@@ -1,42 +1,26 @@
 @charset "UTF-8";
 
-main {
-	width: 100%;
-	padding: 0;
-}
-
-/*カテゴリーボックス*/
-.category-box {
-	width: 80vw;
-	margin: 20px auto;
-	max-width: 100%;
-	height: 85vh;
-	margin: 20px auto;
-	padding: 20px;
-	border: 2px solid black;
-	background-color: rgb(251, 255, 251);
-	overflow-y: auto;
-	box-sizing: border-box;
-	justify-content: center;
-}
-
-/*商品1行分*/
-.category-row {
+/* ラッパーを上部に固定 */
+.wrapper {
+	position: fixed;
+	top: 0;
+	left: 15px;
+	width: calc(100% - 30px);
 	display: flex;
 	align-items: center;
-	border-bottom: 1px solid black;
-	padding: 10px 0;
+	background-color: rgb(251, 255, 251);
+	z-index: 1000;
+	padding: 10px;
 }
 
-/*最後の行はボーダーあり*/
-.category-row:last-child {
-	border-bottom: 1px solid black;
-}
-
-/*各要素の幅調整*/
-.category-name {
-	flex: 3;
-	/*幅の比率*/
+/* コンテンツ */
+.contents {
+	width: 80vw;
+	height: 85vh;
+	overflow-y: auto;
+	margin: 0 auto;
+	margin-top: 55px;
+	color: #555;
 }
 
 /*ホームボタン・新規作成ボタン用*/
@@ -55,4 +39,46 @@ main {
 	height: auto;
 	border-right: 1px solid rgb(192, 192, 192);
 	padding-right: 10px;
+}
+
+/*テーブルデザイン*/
+table {
+	overflow: visible;
+	box-sizing: border-box;
+	border-collapse: collapse;
+	border: 1px solid rgb(50 50 50);
+	text-align: center;
+	width: 80vw;
+	max-width: 100%;
+	margin: 0px auto;
+	padding: 20px;
+}
+
+/*テーブルヘッダー*/
+th {
+	border: 1px solid rgb(50 50 50);
+	top: 0px;
+	padding: 8px;
+	position: sticky;
+	background: rgb(190 235 170);
+	color: rgb(30 80 30);
+	border: 1px solid black;
+	z-index: 1;
+}
+
+/*テーブルの線固定*/
+th::before {
+	content: "";
+	top: -1px;
+	left: -1px;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	border: 1px solid black;
+}
+
+/*テーブルセル*/
+td {
+	border-bottom: 1px solid #333;
+	padding: 8px;
 }
