--- a/WebContent/css/Topping/toppinglist.css
+++ b/WebContent/css/Topping/toppinglist.css
@@ -86,8 +86,8 @@ td {
 	border: 1px solid rgb(0 0 0)
 }
 
-/*ごみ箱ボタン*/
-.btn-trash {
+/*削除ボタン*/
+.btn-delete {
 	border-radius: 10px;
 	box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.3);
 	width: 50px;
